<resources>
    <string name="app_name">GB_Android_Kotlin_SearchFilms</string>
    <string name="app_title" />
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="sort">Sort</string>
    <string name="title_top_10">TOP-10\u0020</string>
    <string name="title_new">NEW\u0020</string>
    <string name="title_coming_soon">COMING SOON\u0020</string>
    <string name="title_fantasy">FANTASY\u0020</string>
    <string name="title_search">SEARCH\u0020</string>
    <string name="quantity">()</string>
    <string name="interval_text">\u0020-\u0020</string>
    <string name="image">image</string>
    <string name="bracket_left">(</string>
    <string name="bracket_right">)</string>
    <string name="title_drama">DRAMA</string>
    <string name="back">Back</string>
    <string name="adult">Adult content</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>