<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="5"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_action_favorite"
        android:orderInCategory="20"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/sort_24"
        android:orderInCategory="50"
        android:title="@string/sort"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_setting"
        android:checkable="true"
        android:orderInCategory="70"
        android:title="@string/adult"
        app:showAsAction="never" />

</menu>