<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.MainFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".ui.MainFragment">

            <TextView
                android:id="@+id/title_top_text_view"
                style="@style/title_style"
                android:text="@string/title_top_10" />

            <TextView
                android:id="@+id/quantity_top_text_view"
                style="@style/title_style"
                android:text="@string/quantity" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_recycler_view_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".ui.MainFragment">

            <TextView
                android:id="@+id/title_new_text_view"
                style="@style/title_style"
                android:text="@string/title_new" />

            <TextView
                android:id="@+id/quantity_new_text_view"
                style="@style/title_style"
                android:text="@string/quantity" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/new_recycler_view_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".ui.MainFragment">

            <TextView
                android:id="@+id/title_coming_soon_text_view"
                style="@style/title_style"
                android:text="@string/title_coming_soon" />

            <TextView
                android:id="@+id/quantity_coming_soon_text_view"
                style="@style/title_style"
                android:text="@string/quantity" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/coming_soon_recycler_view_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".ui.MainFragment">

            <TextView
                android:id="@+id/title_fantasy_text_view"
                style="@style/title_style"
                android:text="@string/title_fantasy" />

            <TextView
                android:id="@+id/quantity_fantasy_text_view"
                style="@style/title_style"
                android:text="@string/quantity" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fantasy_recycler_view_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".ui.MainFragment">

            <TextView
                android:id="@+id/title_drama_text_view"
                style="@style/title_style"
                android:text="@string/title_drama" />

            <TextView
                android:id="@+id/quantity_drama_text_view"
                style="@style/title_style"
                android:text="@string/quantity" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/drama_recycler_view_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>